# app/Http/Controllers/v1/Company/UserController.php
@@ -22,7 +22,7 @@ class UserController extends Controller
      *
      *  @OA\Get(
      *   security={ {"bearerAuth" : ""}},
-     *   tags={"Пользователь компании"},
+     *   tags={"Пользователи компании"},
      *   path="/v1/company/users",
      *   summary="Получение всех пользователей компании",
      *   @OA\Response(
@@ -49,7 +49,7 @@ class UserController extends Controller
      *
      *  @OA\Post(
      *   security={ {"bearerAuth" : ""}},
-     *   tags={"Пользователь компании"},
+     *   tags={"Пользователи компании"},
      *   path="/v1/company/users",
      *   summary="Добавление пользователя в компанию",
      *     @OA\RequestBody(
@@ -86,7 +86,7 @@ class UserController extends Controller
      *
      *  @OA\Get(
      *   security={ {"bearerAuth" : ""}},
-     *   tags={"Пользователь компании"},
+     *   tags={"Пользователи компании"},
      *   path="/v1/company/users/{id}",
      *   summary="Получение информации о пользователе в компании",
      *   @OA\Parameter(
@@ -119,7 +119,7 @@ class UserController extends Controller
      *
      *  @OA\Put(
      *     security={ {"bearerAuth" : ""} },
-     *   tags={"Пользователь компании"},
+     *   tags={"Пользователи компании"},
      *   path="/v1/company/users/{id}",
      *   summary="Обновление информации о пользователе компании",
      *   @OA\Parameter(
@@ -159,36 +159,9 @@ class UserController extends Controller
         return new UserResource($this->userService->update($request->validated(), $id));
     }
 
-    /**
-     *
-     *  @OA\Delete(
-     *     security={ {"bearerAuth" : ""} },
-     *   tags={"Пользователь компании"},
-     *   path="/v1/company/users/{id}",
-     *   summary="Удаление пользователя из компании",
-     *   @OA\Parameter(
-     *         name="id",
-     *         in="path",
-     *         description="ID пользователя",
-     *         required=true,
-     *      ),
-     *   @OA\Response(
-     *     response=200,
-     *     description="",
-     *     @OA\JsonContent(
-     *         @OA\Property(property="data", type="array",  @OA\Items(ref="#/components/schemas/v1.Profile.UserResource")),
-     *     )
-     *  ),
-     *   @OA\Response(response=401, description="Не авторизован"),
-     *   @OA\Response(response=403, description="Контент не доступен"),
-     *   @OA\Response(response=404, description="Не найдено"),
-     *   @OA\Response(response=422, description="Валидация формы"),
-     *   @OA\Response(response=429, description="Бан запросов на 1 минуту"),
-     *   @OA\Response(response=500, description="Ошибка сервера")
-     * )
-     */
     public function destroy($id)
     {
-        return $this->userService->destroy($id);
+        abort(403);
+        //return $this->userService->destroy($id);
     }
 }
